envoyfilter-teaching/envoyfilter/rocketmq/ef-route_config-action-filter_metadata.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: rocketmq
spec:
  workloadSelector:
    labels:
      name: rocketmq
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        portNumber: 10911
        filterChain:
          filter:
            name: "envoy.filters.network.tcp_proxy"
    patch:
      operation: REPLACE
      value:
            name: envoy.filters.network.rocketmq_proxy
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.rocketmq_proxy.v3.RocketmqProxy
              stat_prefix: rocketmq
              route_config:
                name: rocketmq
                routes:
                - match:
                    headers:
                    - name: MQ
                      suffix_match: mq
                  route:
                    cluster: cluster123
                    metadata_match:
                      filter_metadata:
                        envoy.lb:
                          env: mark
  - applyTo: CLUSTER
    patch:
      operation: ADD
      value: 
        name: "cluster123"
        type: STRICT_DNS
        connect_timeout: 0.5s
        lb_policy: ROUND_ROBIN
        lb_subset_config:
          fallback_policy: DEFAULT_SUBSET
          default_subset:
            env: "taobao"
          subset_selectors:
          - keys:
            - env
        load_assignment:
          cluster_name: cluster123
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: broker-0.default.svc.cluster.local
                    port_value: 10911
              metadata:
                filter_metadata:
                  envoy.lb:
                    env: hema
            - endpoint:
                address:
                  socket_address:
                    address: broker-1.default.svc.cluster.local
                    port_value: 10911
              metadata:
                filter_metadata:
                  envoy.lb:
                    env: taobao
